--- a/_posts/2024-11-24-R.md
+++ b/_posts/2024-11-24-R.md
@@ -1,17 +1,14 @@
-
 ---
 layout: post
-title: "R语言基本语法大全"
+title: "R常用语法"
 subtitle: "Notes for R"
 author: "Jin Xu"
-header-style: text
+header-img: img\post-bg-r.png
 tags:
+  - article
   - R
-  - markdown
 ---
-
 # R语言基础语法大全
-
 ## 目录
 - [1. 基本操作](#1-基本操作)
   - [1.1 赋值](#11-赋值)
@@ -38,8 +35,8 @@ tags:
 - [10. 调试](#10-调试)
 
 ---
-
-# R语言基础语法大全
+<br>
+<br>
 
 ## 1. 基本操作
 
