图片路径修改

--- a/_posts/2024-11-24-R.md
+++ b/_posts/2024-11-24-R.md
@@ -3,7 +3,7 @@ layout: post
 title: "R常用语法"
 subtitle: "Notes for R"
 author: "Jin Xu"
-header-img: img\post-bg-r.png
+header-img: img/post-bg-r.png
 tags:
   - article
   - R
