--- a/_posts/2024-11-25-almldl.md
+++ b/_posts/2024-11-25-almldl.md
@@ -7,7 +7,6 @@ header-img: img/post-bg-r.png
 tags:
   - article
 ---
-# 人工智能、机器学习与深度学习详解
 
 很多时候分不清**人工智能、机器学习、深度学习**这几概念的关系，这里描述一下。
 **人工智能**（Artificial Intelligence，AI）：指通过模拟、延伸或复制人类智能的能力，使计算机系统具备类似人类思维、学习、推理和问题解决等能力的一门学科。
@@ -16,7 +15,7 @@ tags:
 
 **深度学习**（Deep Learning）：是机器学习的一种特殊形式，它基于人工神经网络（Artificial Neural Networks，ANN）的概念，通过多层次的神经网络结构（深层网络）来学习数据的表示和特征。
 
-![AI](img/in-post/post-aimldl/640.png)
+![AI示意图](https://mmbiz.qpic.cn/mmbiz_png/FiciaODWjVz62c6C0gjuE20UCAvvej4VSXa8SxUXic1ftyxGrQa5iaZDTkPJOeXqiciaMo1wqfBtHUQ7ib0bU8yeap6gQ/640?wx_fmt=png&from=appmsg)
 
 ## 人工智能（Artificial Intelligence, AI）
 **人工智能**是一个广义概念，目的是赋予计算机系统以模仿、模拟或延伸人类智能的能力。AI 可以分为以下几类：
