--- a/_posts/2024-11-25-almldl.md
+++ b/_posts/2024-11-25-almldl.md
@@ -15,7 +15,7 @@ tags:
 
 **深度学习**（Deep Learning）：是机器学习的一种特殊形式，它基于人工神经网络（Artificial Neural Networks，ANN）的概念，通过多层次的神经网络结构（深层网络）来学习数据的表示和特征。
 
-![AI示意图](https://mmbiz.qpic.cn/mmbiz_png/FiciaODWjVz62c6C0gjuE20UCAvvej4VSXa8SxUXic1ftyxGrQa5iaZDTkPJOeXqiciaMo1wqfBtHUQ7ib0bU8yeap6gQ/640?wx_fmt=png&from=appmsg)
+![AI示意图](https://mms2.baidu.com/it/u=1325012760,712156404&fm=253&app=138&f=JPEG?w=475&h=475)
 
 ## 人工智能（Artificial Intelligence, AI）
 **人工智能**是一个广义概念，目的是赋予计算机系统以模仿、模拟或延伸人类智能的能力。AI 可以分为以下几类：
